vpc.tf
resource "aws_vpc" "vpc-expense" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = var.vpc_name
  }
}
